# hagenuk-clean-code-november-2024

./: README.md
NimGame/: CMakeLists.txt  Schwein.h  main.cpp
NimGame/client/: Client.h
NimGame/game/: AbstractGame.h  Game.h
NimGame/game/nimgame/: NimGameImpl.h
NimGame/game/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h  NimGamePlayer.h
NimGame/game/player/: AbstractPlayer.h  Player.h
NimGame/io/: ConsoleWrite.h  Writer.h
ThreadDemo/: CMakeLists.txt  main.cpp
VectorFillerProject/: CMakeLists.txt  main.cpp
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
